# Yearly-Cost-of-Recurring-Buys

./: Calculate Yearly Costs and Save to File.py  CalculateYearlyCostsandSaveToFile.py  ChartsFromCSV.py  Pie Chart From CSV.py  PieChartFromCSV.py  README.md  Total From CSV File.py  Total From Text File.py  TotalFromCSVFile.py  TotalFromTextFile.py  Yearly Cost of Recurring Buys.py  gitignore  pyproject.toml
