[tool.poetry]
name = "Yearly Cost of Recurring Buys"
version = "1"
description = ""
authors = ["Vincent"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
